--- a/sohbetuygulamasi/app/src/main/res/layout/activity_main2.xml
+++ b/sohbetuygulamasi/app/src/main/res/layout/activity_main2.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".Acitivity.AnaActivity">
 
+
     <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
         android:layout_width="match_parent"
@@ -14,6 +15,7 @@
         android:layout_gravity="center"
         android:layout_margin="5dp"
         android:layout_above="@+id/navigation"
+        android:layout_below="@+id/filtre"
         card_view:cardCornerRadius="4dp"
         card_view:cardElevation="50dp">
 
