--- a/sohbetuygulamasi/app/src/main/res/layout/fragment_ana_sayfa.xml
+++ b/sohbetuygulamasi/app/src/main/res/layout/fragment_ana_sayfa.xml
@@ -6,6 +6,49 @@
     android:orientation="vertical"
     tools:context=".Fragments.AnaSayfaFragment">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:id="@+id/filtre"
+        android:background="#badfdb"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="deneme"
+            android:textSize="10dp"
+            />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:orientation="horizontal"
+            android:layout_below="@id/filtre"
+            android:layout_height="wrap_content">
+        <Spinner
+            android:id="@+id/anasayfairkSpinner"
+
+
+            android:layout_width="120dp"
+            android:layout_height="match_parent"></Spinner>
+        <Spinner
+            android:id="@+id/anasayfacinsiyetSpinner"
+            android:layout_width="120dp"
+            android:layout_height="match_parent"></Spinner>
+        <Spinner
+            android:id="@+id/anasayfailceSpinner"
+            android:layout_width="120dp"
+            android:layout_height="match_parent"></Spinner>
+        </LinearLayout>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:text="filtrele"
+            android:id="@+id/filtreleButton"
+            android:background="#ff8a5c"
+
+            android:layout_gravity="right"
+            android:textColor="#fff"/>
+    </LinearLayout>
+
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
