--- a/sohbetuygulamasi/app/src/main/res/layout/activity_giris.xml
+++ b/sohbetuygulamasi/app/src/main/res/layout/activity_giris.xml
@@ -5,25 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/gradient_1"
     tools:context=".Acitivity.GirisActivity">
 
-    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/card_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        card_view:cardElevation="20dp"
 
-        android:layout_gravity="center"
-        android:layout_margin="2dp"
-        card_view:cardCornerRadius="4dp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginRight="25dp"
-            android:layout_marginLeft="25dp"
-            android:layout_marginTop="50dp"
-            android:orientation="vertical">
+
 
 
 
@@ -32,23 +19,22 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="50dp"
                 android:layout_marginBottom="20dp"
-                android:text="ilkos ile sohbet uygulaması-giris"
+                android:text="Animal Tinder"
                 android:gravity="center"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="20dp"/>
+                android:textColor="#6e2142"
+                android:textSize="28dp"/>
 
             <android.support.design.widget.TextInputLayout
 
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-
-
                 <EditText
                     android:id="@+id/input_email_login"
-                    android:layout_width="match_parent"
+                    android:layout_width="200dp"
+                    android:layout_marginLeft="16dp"
                     android:layout_height="wrap_content"
-                    android:hint="ilkos email adresini gir" />
+                    android:hint="Email" />
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
@@ -57,9 +43,10 @@
 
                 <EditText
                     android:id="@+id/input_password_login"
-                    android:layout_width="match_parent"
+                    android:layout_width="200dp"
+                    android:layout_marginLeft="16dp"
                     android:layout_height="wrap_content"
-                    android:hint="ilkos parolanı gir" />
+                    android:hint="Şifre" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -67,24 +54,29 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="50dp"
+                android:layout_marginLeft="40dp"
+                android:layout_marginRight="40dp"
                 android:layout_marginBottom="20dp"
-                android:text="kayit ol ilkos"
+                android:text="Kayıt Ol"
                 android:id="@+id/hesapYok"
                 android:gravity="center"
-                android:textColor="@color/colorPrimaryDark"
+                android:textColor="#6e2142"
                 android:textSize="20dp"/>
+
 
             <Button
                 android:layout_width="wrap_content"
-                android:layout_marginTop="30dp"
-                android:background="@color/colorPrimaryDark"
-                android:layout_gravity="right"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/mybuttongiris"
+                android:layout_gravity="right"
+                android:textColor="#fff"
+                android:layout_marginRight="60dp"
                 android:id="@+id/loginButon"
-                android:text="ilkos burdan giris yap"/>
+                android:text="Giriş Yap"/>
 
-        </LinearLayout>
 
-    </android.support.v7.widget.CardView>
+
+
 
 </LinearLayout>
