--- a/sohbetuygulamasi/app/src/main/res/layout/fragment_ana_sayfa.xml
+++ b/sohbetuygulamasi/app/src/main/res/layout/fragment_ana_sayfa.xml
@@ -7,17 +7,23 @@
     tools:context=".Fragments.AnaSayfaFragment">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
+        android:orientation="vertical"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="left"
+            android:id="@+id/filterAc"
+            android:background="@drawable/filter"/>
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:orientation="vertical"
         android:id="@+id/filtre"
-        android:background="#badfdb"
         android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="deneme"
-            android:textSize="10dp"
-            />
+
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:orientation="horizontal"
@@ -25,8 +31,6 @@
             android:layout_height="wrap_content">
         <Spinner
             android:id="@+id/anasayfairkSpinner"
-
-
             android:layout_width="120dp"
             android:layout_height="match_parent"></Spinner>
         <Spinner
@@ -37,16 +41,19 @@
             android:id="@+id/anasayfailceSpinner"
             android:layout_width="120dp"
             android:layout_height="match_parent"></Spinner>
-        </LinearLayout>
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:text="filtrele"
-            android:id="@+id/filtreleButton"
-            android:background="#ff8a5c"
 
+        </LinearLayout>
+
+        <Button
+            android:layout_width="60dp"
+            android:layout_height="20dp"
+            android:id="@+id/filtreleButton"
+            android:background="@drawable/mybuttongiris"
             android:layout_gravity="right"
+            android:layout_marginRight="20dp"
             android:textColor="#fff"/>
+    </LinearLayout>
+
     </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
