--- a/sohbetuygulamasi/app/src/main/res/layout/dummy_list_item.xml
+++ b/sohbetuygulamasi/app/src/main/res/layout/dummy_list_item.xml
@@ -11,12 +11,11 @@
       android:orientation="vertical"
       >
     <ImageView
-        android:layout_width="128dp"
-        android:layout_height="128dp"
-        android:layout_gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+
         android:id="@+id/cardimage"
         android:src="@mipmap/ic_launcher"
-        android:layout_centerInParent="true"
         />
     <TextView
         android:id="@+id/text"
