--- a/sohbetuygulamasi/app/src/main/res/layout/activity_main2.xml
+++ b/sohbetuygulamasi/app/src/main/res/layout/activity_main2.xml
@@ -5,44 +5,40 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?android:attr/windowBackground"
     tools:context=".Acitivity.AnaActivity">
-
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:id="@+id/baslik"
         android:orientation="horizontal"
-        android:background="?android:attr/windowBackground"
-        android:layout_height="8dp">
+        android:background="#dbe2ef"
+        android:layout_alignParentTop="true"
+        android:layout_height="60dp">
+
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:textStyle="bold"
-            android:textSize="28dp"
-            android:layout_marginLeft="12dp"
-            android:layout_gravity="center"/>
+            android:gravity="center|left"
+            android:layout_marginLeft="4dp"
+            android:textSize="20dp"
+            android:textColor="#112d4e"
+            android:layout_gravity="center"
+            android:text="Animal Tinder"/>
+
     </LinearLayout>
 
-    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/card_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:layout_margin="5dp"
-        android:layout_below="@+id/baslik"
-        android:layout_above="@+id/navigation"
-        card_view:cardCornerRadius="4dp"
-        card_view:cardElevation="50dp">
+
 
         <FrameLayout
+            android:layout_marginTop="60dp"
             android:id="@+id/fragmentlayout"
             android:layout_width="match_parent"
-            android:padding="20dp"
+            android:layout_marginBottom="60dp"
+            android:background="#f9f7f7"
             android:layout_height="match_parent"
             ></FrameLayout>
-    </android.support.v7.widget.CardView>
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
@@ -51,7 +47,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="0dp"
         android:layout_marginStart="0dp"
-        android:background="?android:attr/windowBackground"
+        android:background="#dbe2ef"
         app:menu="@menu/navigation" />
 
 </RelativeLayout>
