--- a/sohbetuygulamasi/app/src/main/res/layout/dummy_list_item.xml
+++ b/sohbetuygulamasi/app/src/main/res/layout/dummy_list_item.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="16dp"
+    android:layout_margin="4dp"
     >
   <RelativeLayout
       android:layout_width="wrap_content"
@@ -13,9 +13,8 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
         android:id="@+id/cardimage"
-        android:src="@mipmap/ic_launcher"
+        android:scaleType="fitXY"
         />
     <TextView
         android:id="@+id/text"
