--- a/sohbetuygulamasi/app/src/main/res/layout/fragment_ana_sayfa.xml
+++ b/sohbetuygulamasi/app/src/main/res/layout/fragment_ana_sayfa.xml
@@ -7,7 +7,7 @@
     tools:context=".Fragments.AnaSayfaFragment">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:orientation="vertical"
         android:layout_gravity="center"
         android:layout_height="wrap_content">
@@ -30,8 +30,7 @@
                 android:layout_marginLeft="4dp"
                 android:textSize="20dp"
                 android:textColor="#000000"
-                android:layout_gravity="center"
-                android:text="Animal Tinder"/>
+                android:layout_gravity="center"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -81,16 +80,17 @@
             android:layout_width="120dp"
             android:layout_height="match_parent"></Spinner>
 
+            <Button
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:id="@+id/filtreleButton"
+                android:background="@drawable/mybuttonfiltre"
+                android:layout_gravity="right"
+                android:layout_marginRight="20dp"
+                android:textColor="#fff"/>
         </LinearLayout>
 
-        <Button
-            android:layout_width="60dp"
-            android:layout_height="20dp"
-            android:id="@+id/filtreleButton"
-            android:background="@drawable/mybuttonfiltre"
-            android:layout_gravity="right"
-            android:layout_marginRight="20dp"
-            android:textColor="#fff"/>
+
     </LinearLayout>
 
     </LinearLayout>
