--- a/sohbetuygulamasi/app/src/main/res/layout/fragment_kullanici_profil.xml
+++ b/sohbetuygulamasi/app/src/main/res/layout/fragment_kullanici_profil.xml
@@ -6,15 +6,13 @@
     android:orientation="vertical"
     tools:context=".Fragments.KullaniciProfilFragment">
 
-    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    <android.support.v4.widget.NestedScrollView
         android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:layout_margin="5dp"
-        android:layout_above="@+id/navigation"
-        card_view:cardCornerRadius="4dp"
-        card_view:cardElevation="50dp">
+        android:layout_above="@+id/navigation">
     
     <LinearLayout
         android:layout_width="match_parent"
@@ -70,6 +68,7 @@
 
 
         <LinearLayout
+            android:layout_marginTop="40dp"
             android:orientation="horizontal"
             android:layout_width="match_parent"
 
@@ -93,6 +92,7 @@
 
         </LinearLayout>
         <LinearLayout
+            android:layout_marginTop="20dp"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_marginRight="20dp"
@@ -118,7 +118,7 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_marginRight="20dp"
-
+        android:layout_marginTop="20dp"
         android:layout_marginBottom="12dp"
         android:layout_marginLeft="20dp"
         android:layout_height="wrap_content">
@@ -160,7 +160,7 @@
             android:layout_marginLeft="20dp"
             android:layout_gravity="center"
             android:gravity="center"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="40dp"
             android:layout_height="wrap_content">
             <Button
                 android:layout_width="60dp"
@@ -207,6 +207,6 @@
 
 
 
-    </android.support.v7.widget.CardView>
+    </android.support.v4.widget.NestedScrollView>
 
 </LinearLayout>
