--- a/sohbetuygulamasi/app/src/main/res/layout/fragment_kullanici_profil.xml
+++ b/sohbetuygulamasi/app/src/main/res/layout/fragment_kullanici_profil.xml
@@ -166,7 +166,7 @@
                 android:layout_width="60dp"
                 android:layout_marginTop="8dp"
                 android:padding="8dp"
-                android:background="@drawable/mybuttonsend"
+                android:background="#6c7b95"
                 android:textSize="8dp"
                 android:textColor="#fff"
                 android:layout_gravity="right"
@@ -180,7 +180,7 @@
                 android:padding="8dp"
                 android:textSize="8dp"
                 android:textColor="#fff"
-                android:background="@drawable/mybuttonsend"
+                android:background="#6c7b95"
                 android:layout_gravity="right"
                 android:layout_height="32dp"
                 android:id="@+id/bilgiIstekButonu"
@@ -193,7 +193,7 @@
                 android:textSize="8dp"
                 android:layout_marginLeft="20dp"
                 android:textColor="#fff"
-                android:background="@drawable/mybuttonsend"
+                android:background="#6c7b95"
                 android:layout_gravity="right"
                 android:layout_height="32dp"
                 android:id="@+id/bilgiArkadasButon"
