--- a/sohbetuygulamasi/app/src/main/res/menu/navigation.xml
+++ b/sohbetuygulamasi/app/src/main/res/menu/navigation.xml
@@ -2,14 +2,21 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
+        android:id="@+id/petbul"
         android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
+        android:title="Pet Bul" />
+
+
+    <item
+        android:id="@+id/navigation_home"
+        android:icon="@drawable/ic_notifications_black_24dp"
+        android:title="Mesajlar" />
 
     <item
         android:id="@+id/navigation_dashboard"
         android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:title="İstekler" />
+
 
     <item
         android:id="@+id/navigation_profil"
